@@ -1,6 +1,6 @@
 .eea-geotags-popup {
   box-shadow: 0px 0px 100px #000;
-  broder-radius: 0;
+  border-radius: 0;
 }
 
 .eea-geotags-popup .ui-dialog-titlebar {
